A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   cvs -z5 log -rb2xx: > log.out
   {py_dir}\Tools\scripts\logmerge.py -t < log.out > log2.out
However contributors are encouraged to add their own entries for their work.

Since build 212:
----------------

* MAPI gets support for IMAPIAdviseSink

Since build 211:
----------------

* Remove warning about VARDESCs in obscure circumstances when using
  COM objects.

* Add winapi.SetSystemPowerState(), win32pipe.TransactNamedPipe(),
  win32net.NetValidatePasswordPolicy(), 

* win32api.GetConsoleTitle() could raise win32api.error with an error
  code of 0 when the title was > 64 characters.  It now returns the
  full title.

* New IExplorerPaneVisibility interface, minor shell bugfixes.

* Fix a couple of makepy related unicode issues, and generate to
  a .temp file so an error doesn't leave a 1/2 generated module.

* Fix so makepy works in IDLE in non-English locales.

* Pythonwin changes from Roger:
  - Right-click menu gets "Copy code without prompts" and "Execute 
    code from clipboard" options.
  - If text is selected when period key is pressed, replace text
    instead of doing autocomplete
  - Add a keyboard shortcut to fold up second level indents
  - Allow keypad keys to perform original function when folding 
    is disabled (feature req 1798328)

* Add some extra service configuration parameters introduced with Vista


Since build 210:
----------------
* Support for RegisterDeviceNotification in win32gui and for packing and
  unpacking the various structures in win32gui_struct.  Demos in 
  win32\Demos\win32gui_devicenotify.py and service\serviceEvents.py

* adodbapi added to pywin32 package CVS tree:
- this pure python package is a fully dbapi 2.0 compliant database access
  method. This is a copy of the code from the adodbapi sourceforge project,
  which will eventually become obsolete in favor of this site. Inclusion here